--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@anatoliygatt/heart-switch": "^1.0.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
